@@ -16,7 +16,9 @@ Revision history for DBIx::Class
         - Improve handling of explicit key attr in ResultSet::find
         - Add warnings for non-unique ResultSet::find queries
         - Changed Storage::DBI::Replication to Storage::DBI::Replicated, fixed
-		  some problems using this with versioned databases, added some docs
+          some problems using this with versioned databases, added some docs
+        - By default now deploy/diff et al. will ignore constraint and index 
+          names
 
 0.08010 2008-03-01 10:30
         - Fix t/94versioning.t so it passes with latest SQL::Translator
